tests/ui/frontmatter/unclosed-6.stderr
error: invalid preceding whitespace for frontmatter close
  --> $DIR/unclosed-6.rs:3:1
   |
LL |  ---
   | ^^^^
   |
note: frontmatter close should not be preceded by whitespace
  --> $DIR/unclosed-6.rs:3:1
   |
LL |  ---
   | ^

error: aborting due to 1 previous error

